--- a/source/convx/convx.ipynb
+++ b/source/convx/convx.ipynb
@@ -14,47 +14,44 @@
     "\n",
     "I highly recommend that anyone attempting to run this code on the full dataset use hardware that is comparable or better.\n",
     "\n",
-    "The first step in this process is getting the data set up correctly. We start by running the preprocess function. This will turn the given Data_Entry_2017.csv file into a version we can use, as well as split the images in to train, test, and validation sets. The code for this is not shown, but you can find all of it in the convx_utils.py file."
+    "First, we need to load our base model. We will also define a few variables that we will need later."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {
-    "collapsed": true
+    "scrolled": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Using TensorFlow backend.\n"
+     ]
+    }
+   ],
    "source": [
+    "import os\n",
+    "from keras.applications import ResNet50\n",
+    "from keras import optimizers\n",
+    "from keras.layers import Dropout, Flatten, Dense\n",
+    "from keras.models import Sequential, Model\n",
+    "from keras.preprocessing.image import ImageDataGenerator\n",
+    "from keras.models import model_from_json\n",
+    "from sklearn.metrics import accuracy_score, fbeta_score, confusion_matrix\n",
     "from convx_utils import *\n",
-    "\n",
-    "preprocess()"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Now we can start training the data. First, we need to load our base model. We will also define a few variables that we will need later."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": [
-    "from keras.applications import VGG16\n",
     "\n",
     "# This is our base model. We will use the weights and structure already known to be successful in other domains and\n",
     "#   adjust it to fit our current problem\n",
-    "base_model = applications.VGG16(include_top=False, weights='imagenet', input_shape=(250, 250, 3))\n",
+    "base_model = ResNet50(include_top=False, weights='imagenet', input_shape=(512, 512, 3))\n",
     "\n",
-    "target_image_size = (250, 250)\n",
+    "target_image_size = (512, 512)\n",
     "batch_size = 32\n",
-    "transfer_learning_epochs = 200\n",
-    "fine_tuning_epochs = 5"
+    "transfer_learning_epochs = 1\n",
+    "fine_tuning_epochs = 1\n",
+    "fine_tuning_layers_to_train = 10"
    ]
   },
   {
@@ -66,7 +63,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {
     "collapsed": true
    },
@@ -97,7 +94,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {
     "collapsed": true
    },
@@ -127,37 +124,42 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
    "source": [
-    "train_bottleneck_file = os.path.join(BOTTLENECK_PATH, model_name, \"train.npy\")\n",
-    "validation_bottleneck_file = os.path.join(BOTTLENECK_PATH, model_name, \"validation.npy\")\n",
+    "bottleneck_file_path = os.path.join(BOTTLENECK_PATH, model_name)\n",
+    "train_bottleneck_file = os.path.join(bottleneck_file_path, \"train.npy\")\n",
+    "validation_bottleneck_file = os.path.join(bottleneck_file_path, \"validation.npy\")\n",
+    "    \n",
+    "# Extract bottleneck features if they have not been already\n",
+    "if not os.path.exists(bottleneck_file_path):\n",
+    "    data_generator = ImageDataGenerator(rescale=1. / 255)\n",
     "\n",
-    "data_generator = ImageDataGenerator(rescale=1. / 255)\n",
+    "    train_generator = data_generator.flow_from_directory(\n",
+    "        TRAIN_PATH,\n",
+    "        target_size=target_image_size,\n",
+    "        batch_size=batch_size,\n",
+    "        class_mode='binary',\n",
+    "        shuffle=False\n",
+    "    )\n",
+    "    \n",
+    "    build_dir_path(bottleneck_file_path)\n",
+    "    bottleneck_features_train = base_model.predict_generator(train_generator, num_training_steps)\n",
+    "    np.save(open(train_bottleneck_file, 'wb'), bottleneck_features_train)\n",
     "\n",
-    "train_generator = data_generator.flow_from_directory(\n",
-    "    TRAIN_PATH,\n",
-    "    target_size=target_image_size,\n",
-    "    batch_size=batch_size,\n",
-    "    class_mode=None,\n",
-    "    shuffle=False\n",
-    ")\n",
-    "bottleneck_features_train = model.predict_generator(train_generator, num_training_steps)\n",
-    "build_dir_path(bottleneck_file_path)\n",
-    "np.save(open(train_bottleneck_file, 'wb'), bottleneck_features_train)\n",
-    "\n",
-    "validation_path_generator = data_generator.flow_from_directory(\n",
-    "    VALIDATION_PATH,\n",
-    "    target_size=target_image_size,\n",
-    "    batch_size=batch_size,\n",
-    "    class_mode=None,\n",
-    "    shuffle=False\n",
-    ")\n",
-    "bottleneck_features_validation = model.predict_generator(validation_path_generator, num_validation_steps)\n",
-    "np.save(open(validation_bottleneck_file, 'wb'), bottleneck_features_validation)"
+    "    validation_path_generator = data_generator.flow_from_directory(\n",
+    "        VAL_PATH,\n",
+    "        target_size=target_image_size,\n",
+    "        batch_size=batch_size,\n",
+    "        class_mode='binary',\n",
+    "        shuffle=False\n",
+    "    )\n",
+    "    \n",
+    "    bottleneck_features_validation = base_model.predict_generator(validation_path_generator, num_validation_steps)\n",
+    "    np.save(open(validation_bottleneck_file, 'wb'), bottleneck_features_validation)"
    ]
   },
   {
@@ -169,24 +171,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Train on 80725 samples, validate on 8970 samples\n",
+      "Epoch 1/1\n",
+      "80725/80725 [==============================] - 22s - loss: 0.5383 - acc: 0.4619 - val_loss: 0.5334 - val_acc: 0.4666\n"
+     ]
+    }
+   ],
    "source": [
     "def build_fully_connected_top_layer(connecting_shape):\n",
     "    top_layers = Sequential()\n",
     "    top_layers.add(Flatten(input_shape=connecting_shape))\n",
     "    top_layers.add(Dense(256, activation='relu'))\n",
-    "    top_layers.add(Dropout(0.5))\n",
+    "    top_layers.add(Dropout(0.1))\n",
     "    top_layers.add(Dense(1, activation='sigmoid'))\n",
     "    return top_layers\n",
     "\n",
-    "\n",
     "# load training data\n",
     "train_data = np.load(open(train_bottleneck_file, 'rb'))\n",
-    "train_labels = np.array([0] * healthy_train_images + [1] * unhealthy_train_images)\n",
+    "train_labels = np.array(([0] * healthy_train_images) + ([1] * unhealthy_train_images))\n",
     "\n",
     "# load validation data\n",
     "validation_data = np.load(open(validation_bottleneck_file, 'rb'))\n",
@@ -194,17 +203,18 @@
     "\n",
     "top_layer = build_fully_connected_top_layer(train_data.shape[1:])\n",
     "\n",
-    "top_layer.compile(loss='binary_crossentropy',\n",
-    "                  optimizer=optimizers.SGD(momentum=0.95),\n",
+    "top_layer.compile(loss='hinge',\n",
+    "                  optimizer='adam',\n",
     "                  metrics=['accuracy'])\n",
     "\n",
     "top_layer.fit(train_data, train_labels,\n",
-    "              epochs=epochs,\n",
+    "              epochs=transfer_learning_epochs,\n",
     "              batch_size=batch_size,\n",
     "              validation_data=(validation_data, validation_labels),\n",
-    "              verbose=0)\n",
+    "              verbose=1)\n",
     "\n",
-    "top_layers_weights_path = os.path.join(models_save_directory, \"transfer_learning_weights.h5\")"
+    "top_layers_weights_path = os.path.join(models_save_directory, \"transfer_learning_weights.h5\")\n",
+    "top_layer.save_weights(top_layers_weights_path)"
    ]
   },
   {
@@ -216,14 +226,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
    "source": [
     "top_layer = build_fully_connected_top_layer(base_model.output_shape[1:])\n",
-    "top_layer.load_weights(top_model_weights_path)\n",
+    "top_layer.load_weights(top_layers_weights_path)\n",
     "\n",
     "convx_model = Model(inputs=base_model.input, outputs=top_layer(base_model.output))\n",
     "convx_model.compile(loss='binary_crossentropy',\n",
@@ -242,7 +252,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {
     "collapsed": true
    },
@@ -250,12 +260,14 @@
    "source": [
     "convx_model = Model(inputs=base_model.input, outputs=top_layer(base_model.output))\n",
     "\n",
-    "for layer in model_for_finetune.layers[:len(model_for_finetune.layers) - layers_to_train]:\n",
+    "for layer in convx_model.layers[:len(convx_model.layers) - fine_tuning_layers_to_train]:\n",
     "    layer.trainable = False\n",
     "\n",
-    "convx_model.compile(loss='binary_crossentropy',\n",
-    "                    optimizer=optimizers.SGD(momentum=0.95),\n",
+    "convx_model.compile(loss='hinge',\n",
+    "                    optimizer='adam',\n",
     "                    metrics=['accuracy'])\n",
+    "\n",
+    "data_generator = ImageDataGenerator(rescale=1. / 255)\n",
     "\n",
     "train_generator = data_generator.flow_from_directory(\n",
     "    TRAIN_PATH,\n",
@@ -269,32 +281,77 @@
     "    batch_size=batch_size,\n",
     "    class_mode='binary')\n",
     "\n",
-    "model_for_finetune.fit_generator(\n",
+    "convx_model.fit_generator(\n",
     "    train_generator,\n",
     "    steps_per_epoch=num_training_steps,\n",
-    "    epochs=epochs,\n",
+    "    epochs=fine_tuning_epochs,\n",
     "    validation_data=validation_generator,\n",
     "    validation_steps=num_validation_steps,\n",
-    "    verbose=0\n",
-    ")"
+    "    verbose=1\n",
+    ")\n",
+    "\n",
+    "with open(os.path.join(models_save_directory, \"best_model.json\".format(model_name)), \"w\") as json_file:\n",
+    "    json_file.write(convx_model.to_json())"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Our model has now been fine tuned and the training process is complete! Lets evaluate the results."
+    "Our model has now been fine tuned and the training process is complete! Lets evaluate the results. While we are also going to look at accuracy, our primary metric of evaluation is going to be f-beta, with a beta score of three. With this, we will get to see which models fit the data well while giving more weight to good recall. "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "And now, the evaluation."
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Found 22424 images belonging to 2 classes.\n"
+     ]
+    }
+   ],
    "source": [
-    "# TODO analyze that shit"
+    "with open(os.path.join(models_save_directory, \"best_model.json\"), 'r') as model_file:\n",
+    "    convx_model = model_from_json(model_file.read())\n",
+    "    \n",
+    "convx_model.compile(loss='binary_crossentropy',\n",
+    "                    optimizer=optimizers.SGD(momentum=0.95),\n",
+    "                    metrics=['accuracy'])\n",
+    "\n",
+    "healthy_test_images = count_files(os.path.join(TEST_PATH, \"healthy\"))\n",
+    "unhealthy_test_images = count_files(os.path.join(TEST_PATH, \"unhealthy\"))\n",
+    "test_iteration_count = get_iterations_per_epoch((healthy_test_images + unhealthy_test_images), batch_size)\n",
+    "test_labels = np.array(([0] * healthy_test_images) + ([1] * unhealthy_test_images))\n",
+    "\n",
+    "data_generator = ImageDataGenerator(rescale=1. / 255)\n",
+    "\n",
+    "test_generator = data_generator.flow_from_directory(\n",
+    "    TEST_PATH,\n",
+    "    target_size=target_image_size,\n",
+    "    batch_size=batch_size,\n",
+    "    class_mode='binary',\n",
+    "    shuffle=False,\n",
+    ")\n",
+    "\n",
+    "raw_predictions = convx_model.predict_generator(test_generator, test_iteration_count)\n",
+    "predictions = np.round(raw_predictions)\n",
+    "accuracy = accuracy_score(test_labels, predictions)\n",
+    "f3_score = fbeta_score(test_labels, predictions, 3)\n",
+    "conf_matrix = confusion_matrix(test_labels, predictions)\n",
+    "print(\"Accuracy: {}\".format(accuracy))\n",
+    "print(\"F3 Score: {}\".format(f3_score))\n",
+    "print(\"Confusion Matrix: \\n{}\".format(conf_matrix))"
    ]
   }
  ],
